--- a/config/database.yml
+++ b/config/database.yml
@@ -1,9 +1,3 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
   adapter: sqlite3
   pool: 5
@@ -21,5 +15,11 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  host: <%= ENV["PG_DB_HOST"] %>
+  database: <%= ENV["PG_DB_NAME"] %>
+  username: <%= ENV["PG_DB_USER"] %>
+  password: <%= ENV["PG_DB_PASSWORD"] %>
+  encoding: utf8
+  pool: <%= ENV["PG_DB_POOL"] %>
+  timeout: 5000
