--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -3,7 +3,10 @@ upstream puma {
 }
 
 server {
-  listen 80 default_server;
+ listen 80;
+ listen 443 ssl default_server;
+
+
   server_name aecci.ecci.ucr.ac.cr;
 
   root /home/asoinfo/apps/plataforma-web-AECCI/current/public;
@@ -29,8 +32,6 @@ server {
   client_max_body_size 10M;
   keepalive_timeout 10;
 
-  listen 443 ssl;
-
   ssl_certificate /etc/letsencrypt/live/aecci.ecci.ucr.ac.cr/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/aecci.ecci.ucr.ac.cr/privkey.pem;
 
@@ -39,5 +40,5 @@ server {
   ssl_ciphers 'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA';
   ssl_prefer_server_ciphers on;
   ssl_session_cache shared:SSL:10m;
-  ssl_dhparam /home/deploy/dhparams.pem;
+  ssl_dhparam /home/asoinfo/dhparams.pem;
 }
