Se actualiza la configuracion del nginx para que lo redireccione a https

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -2,11 +2,14 @@ upstream puma {
   server unix:///home/asoinfo/apps/plataforma-web-AECCI/shared/tmp/sockets/puma.sock;
 }
 
+# for redirecting to https version of the site
 server {
- listen 80;
- listen 443 ssl default_server;
+  listen 80;
+  rewrite ^(.*) https://$host$1 permanent;
+}
 
-
+server {
+  listen 443 default ssl;
   server_name aecci.ecci.ucr.ac.cr;
 
   root /home/asoinfo/apps/plataforma-web-AECCI/current/public;
@@ -22,6 +25,7 @@ server {
   try_files $uri/index.html $uri @puma;
   location @puma {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto https;
     proxy_set_header Host $http_host;
     proxy_redirect off;
 
@@ -32,6 +36,8 @@ server {
   client_max_body_size 10M;
   keepalive_timeout 10;
 
+  # SSL
+  ssl on;
   ssl_certificate /etc/letsencrypt/live/aecci.ecci.ucr.ac.cr/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/aecci.ecci.ucr.ac.cr/privkey.pem;
 
